--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
     "@auth0/angular-jwt": "^5.2.0",
+    "@auth0/auth0-angular": "^2.2.3",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@types/w3c-image-capture": "^1.0.10",
